--- a/config/west.yml
+++ b/config/west.yml
@@ -10,6 +10,8 @@ manifest:
       revision: main
       import: app/west.yml
     - name: zmk-helpers
+      path: modules/zmk/helpers
+
       remote: urob
       revision: main
   self:
